# additional_chapters_of_optimization_methods

./: .gitignore  README.md
1) Bounded knapsack problem/: CMakeLists.txt  README.md  commands.txt
1) Bounded knapsack problem/include/: max_plus_conv.hpp  utils.hpp
1) Bounded knapsack problem/logs/: conv_stress_test_log.txt
1) Bounded knapsack problem/src/: knapsack.cpp  knapsack_.cpp  knapsack_final.cpp  test_base.cpp
1) Bounded knapsack problem/tests/: 1.txt  10.txt  11.txt  12.txt  13.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
2) Corruption problem (2-SAT)/: CMakeLists.txt  README.md  commands.txt
2) Corruption problem (2-SAT)/src/: corruption.cpp  corruption_final.cpp
2) Corruption problem (2-SAT)/tests/: 1.txt  2.txt  3.txt
3) Treasure problem (Weight bounded knapsack)/: CMakeLists.txt  README.md  commands.txt
3) Treasure problem (Weight bounded knapsack)/include/: max_queue.hpp  max_stack.hpp
3) Treasure problem (Weight bounded knapsack)/src/: treasure.cpp  treasure_1.cpp  treasure_2.cpp  treasure_3.cpp  treasure_final.cpp
3) Treasure problem (Weight bounded knapsack)/tests/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
4) Monotone problem/: CMakeLists.txt  README.md  commands.txt
4) Monotone problem/src/: monotone.cpp  monotone_final.cpp
4) Monotone problem/tests/: 1.txt
